--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,31 @@ periods:
     - September 1999: "Grade 1 - Lincoln Heights"
   - name: 2000's
     events:
+    - January 1 2000: "The World Explodes!....Sike"
     - March 29 2000: "🎂 Thomas turns 7. It's a new millennium."
+    - September 2000: "Grade 2 - Lincoln Heights"
+    - September 2001: "Grade 3 - Lincoln Heights"
+    - September 2002: "Grade 4 - Lincoln Heights"
+    - December 2002: "Grade 4 - Home School"
+    - September 2003: "Grade 5 - Lincoln Heights"
+    - September 2004: "Grade 6 - Lincoln Heights"
+    - September 2005: "Grade 7 - Lincoln Heights"
+    - September 2006: "Grade 8 - Lincoln Heights"
+    - December 2006: "Grade 8 - Home School"
+    - September 2007: "Grade 9 - Bluevale Collegiate Institute"
+    - September 2007: "Met Chase - I sat in the wrong seat in Business class, ended up being beside Chase, we became fast friends"
+    - November 2007: "Moved to 371 Victoria St S"
+    - January 1 2008: "Grade 9 - Kitchener Collegiate Institute"
+    - September 1 2008: "Grade 10 - Kitchener Collegiate Institute"
+    - September 1 2009: "Grade 11 - Kitchener Collegiate Institute"
     - November 2009: >-
         📷 Link Example <a href="https://curacomputers.com" target="_blank" rel="noopener"
         title="See some of my photos">Link example</a>.
   - name: 2010's
     events:
+    - September 1 2010: "Grade 12 - Kitchener Collegiate Institute"
     - June 2010: "✈️ test."
+    - September 1 2011: "Grade 13 - Kitchener Collegiate Institute - Finish Specialist High Skills Major"
   - name: 2020's
     events:
     - May 2020: "Thomas goes crazy"
