--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,8 @@ periods:
     - September 1 2011: "Grade 13 - Kitchener Collegiate Institute - Finish Specialist High Skills Major"
     - June 02 2014: "Saw Danny for the first time, I knew I had to talk to her"
     - June 17 2014: "First time playing boardgames with Danny"
-    - September 13 2014: "Started A+ CE course at Conestoga College"
+    - September 13 2014: "🎓 Started A+ CE course at Conestoga College"
   - name: 2020's
     events:
     - May 2020: "Thomas goes crazy"
+    - May 16 2023: "🎓 Started the Cyber Security Program at Conestoga College"
