--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ periods:
     - January 1 2008: "Grade 9 - Kitchener Collegiate Institute"
     - September 1 2008: "Grade 10 - Kitchener Collegiate Institute"
     - September 1 2009: "Grade 11 - Kitchener Collegiate Institute"
+    - November 2009: "Met Brent"
     - November 2009: >-
         📷 Link Example <a href="https://curacomputers.com" target="_blank" rel="noopener"
         title="See some of my photos">Link example</a>.
