--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Thomas's Life"
 # Your name
 author: Thomas Busch
 # Show a link to LinkedIn in the header intro. Comment out to disable.
-# linkedin: https://www.linkedin.com/in/thomas-busch-57a95160/
+linkedin: https://www.linkedin.com/in/thomas-busch-57a95160/
 # Show a link at the top of your timeline to your main personal site
 # Comment this out to disable
 personal_site:
