--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,15 @@ periods:
     - September 2003: "Grade 5 - Lincoln Heights"
     - September 2004: "Grade 6 - Lincoln Heights"
     - September 2005: "Grade 7 - Lincoln Heights"
+    - January 2006: "Started playing the Guitar"
     - September 2006: "Grade 8 - Lincoln Heights"
     - December 2006: "Grade 8 - Home School"
+    - December 2006: "Started learning to play the Piano"
     - September 2007: "Grade 9 - Bluevale Collegiate Institute"
     - September 2007: "Met Chase - I sat in the wrong seat in Business class, ended up being beside Chase, we became fast friends"
     - November 2007: "Moved to 371 Victoria St S"
-    - January 1 2008: "Grade 9 - Kitchener Collegiate Institute"
+    - January 2008: "Grade 9 - Kitchener Collegiate Institute"
+    - January 2008: "Learned how to play the Tenor Saxophone"
     - September 1 2008: "Grade 10 - Kitchener Collegiate Institute"
     - September 1 2009: "Grade 11 - Kitchener Collegiate Institute"
     - November 2009: "Met Brent"
