--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ show_today: true
 # Each period has a list of events formatted as `- date: title`. If you don't want to have period dividers, leave out the name field.
 periods:
   - events:
+    -name: 1990's
     - March 29 1993: "👶 Thomas is born in Hamilton, Ontario."
     - September 1997: "Jr Kindergarten - Bridgeport Public School"
     - September 1998: "Sr Kindergarten - Bridgeport Public School"
@@ -31,15 +32,15 @@ periods:
     - September 2003: "Grade 5 - Lincoln Heights"
     - September 2004: "Grade 6 - Lincoln Heights"
     - September 2005: "Grade 7 - Lincoln Heights"
-    - January 2006: "Started playing the Guitar"
+    - January 2006: "🎸 Started playing the Guitar"
     - September 2006: "Grade 8 - Lincoln Heights"
     - December 2006: "Grade 8 - Home School"
-    - December 2006: "Started learning to play the Piano"
+    - December 2006: "🎹 Started learning to play the Piano"
     - September 2007: "Grade 9 - Bluevale Collegiate Institute"
     - September 2007: "Met Chase - I sat in the wrong seat in Business class, ended up being beside Chase, we became fast friends"
     - November 2007: "Moved to 371 Victoria St S"
     - January 2008: "Grade 9 - Kitchener Collegiate Institute"
-    - January 2008: "Learned how to play the Tenor Saxophone"
+    - January 2008: "🎷 Learned how to play the Tenor Saxophone"
     - September 1 2008: "Grade 10 - Kitchener Collegiate Institute"
     - September 1 2009: "Grade 11 - Kitchener Collegiate Institute"
     - November 2009: "Met Brent"
@@ -49,14 +50,12 @@ periods:
   - name: 2010's
     events:
     - September 1 2010: "Grade 12 - Kitchener Collegiate Institute"
-    - June 2010: "✈️ test."
     - September 1 2011: "Grade 13 - Kitchener Collegiate Institute - Finish Specialist High Skills Major"
     - June 02 2014: "💖 Saw Danny for the first time, I knew I had to talk to her"
-    - June 17 2014: "First time playing boardgames with Danny"
+    - June 17 2014: "♟️ First time playing boardgames with Danny"
     - September 13 2014: "🎓 Started A+ CE course at Conestoga College"
   - name: 2020's
     events:
-    - May 2020: "Thomas goes crazy"
     - March 29 2023: |
         Danny surprised me on our trip to Toronto, had Melissa, Daniella, Louis, and Cameron waiting on the GO Train.
         We all went to Starbucks for a free birthday drink and went to the Old Spaghetti Factory
